--- a/src/containers/RecipeSearch.css
+++ b/src/containers/RecipeSearch.css
@@ -1,6 +1,28 @@
 #keyword-search {
-  width: 100%;
+letter-spacing: 0;
+    width: 600px;
+    display: block;
+    outline: none;
+    border-color:darkorange;
+    border-radius: 3em;
+    box-sizing: border-box;
+    position: relative;
+    margin: 45px auto;
+    font-size: 25px;
+    text-decoration: none;
+    align-content: center;
+    white-space: nowrap;
+    text-align: center;
+    cursor: pointer;
+    transition: all 200ms ease;
+    padding: 11px 24px;
+    background-color: #fff;
+    box-shadow: 0 4px 10px darkorange, 0 0 1px orange inset;
 }
+
+/* .searchContainer {
+  margin: center;
+} */
 
 #recipe-title {
   color: black;
