Change search bar to percetange and added title

--- a/src/containers/RecipeSearch.css
+++ b/src/containers/RecipeSearch.css
@@ -1,6 +1,6 @@
 #keyword-search {
 letter-spacing: 0;
-    width: 500px;
+    width: 60%;
     display: block;
     outline: none;
     border-color:darkorange;
